@@ -1,3 +1,6 @@
+2010-09-26  Kirit Saelensminde  <kirit@felspar.com>
+ fostlib::string instances are now constructible from a wider range of iterators, including fostlib::string::const_iterator.
+
 2010-09-19  Kirit Saelensminde  <kirit@felspar.com>
  Fixed a bug in coercion when going between nullable types.
 
